NAME = installbook

SGML = install01.sgml install02.sgml installbook.sgml installcont.sgml installmeta.sgml   

GENERATED_SGML = installrevhistory.sgml

noinst_DATA = $(GENERATED_SGML)

SGML_FILES = $(SGML) $(GENERATED_SGML)

EXTRA_DIST = install.ent $(SGML)

include $(top_srcdir)/Makefile.common
include $(top_srcdir)/Makefile.rules
