NAME = installbook

SGML = install01.sgml install02.sgml installbook.sgml installcont.sgml installmeta.sgml   

GENERATED_SGML = $(NAME)revhistory.sgml

noinst_DATA = $(GENERATED_SGML)

SGML_FILES = $(SGML) $(GENERATED_SGML)

EXTRA_DIST = installbook.ent $(SGML)

include $(top_srcdir)/Makefile.common
include $(top_srcdir)/Makefile.rules
