NAME = overbook

SGML = over01.sgml over02.sgml over03.sgml over04.sgml over05.sgml overbook.sgml overcont.sgml overmeta.sgml  

GENERATED_SGML = overrevhistory.sgml

noinst_DATA = $(GENERATED_SGML)

SGML_FILES = $(SGML) $(GENERATED_SGML)

EXTRA_DIST = over.ent $(SGML)

include $(top_srcdir)/Makefile.common
include $(top_srcdir)/Makefile.rules


