NAME = overbook

XML = over01.xml over02.xml over03.xml over04.xml over05.xml overbook.xml overcont.xml overmeta.xml  

GENERATED_XML = $(NAME)revhistory.xml

XML_FILES = $(XML) $(GENERATED_XML)

EXTRA_DIST = overbook.ent $(XML)

include $(top_srcdir)/Makefile.common
include $(top_srcdir)/Makefile.rules


